refactor(record): clean up parsing stream before generation phase
- Remove UnresolvedReturnType from ReturnTypeRef: graphql-java guarantees all
  field return type references are valid; directive-argument string type refs
  (e.g. @nodeId typeName) fall through to OtherReturnType gracefully
- Remove redundant type-existence checks from validateArguments/validateInputType:
  graphql-java already enforces this at schema assembly time; custom scalars and
  enums were incorrectly flagged as unknown types
- Standardize arguments/contextArguments order: TableMethodQueryField and
  TableMethodField now put arguments before contextArguments, matching the
  service-family convention
- Fix UnresolvedKeyRef("") to use a descriptive placeholder message
- Remove ARG_SORT_FIELD_NAME duplicate constant (same value as ARG_NAME)
- Replace Collectors.toList() with .toList() in argStringList for immutability
- Fix @computed → @externalField in ConditionOnlyRef Javadoc
- Fix "warning" → "error" in InputFieldSpec Javadoc for javaName deprecation
- Remove duplicate @code{arguments} sentence from ServiceQueryField Javadoc
- Add comment explaining ConstructorField is intentionally deferred to UnclassifiedField
- Remove test cases that tested now-impossible states

https://claude.ai/code/session_012BHSnrKwDL1zddc2ico7pD